--- a/package.json
+++ b/package.json
@@ -59,7 +59,13 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@swc/core": "1.3.96",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.8.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
@@ -67,15 +73,5 @@
     "tempo-devtools": "^2.0.95",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
-  },
-  "devDependencies": {
-    "@swc/core": "1.3.96",
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "tailwindcss": "3.4.1",
-    "tempo-devtools": "^2.0.95",
-    "typescript": "^5.2.2",
-    "vite": "^6.2.3"
   }
 }
